Fixed white gap

--- a/client/agora/public/css/topic.css
+++ b/client/agora/public/css/topic.css
@@ -7,7 +7,7 @@
     font-family: sans-serif;
 }
 
-.black-bar {
+#black-bar {
     position: fixed;
     right: 0;
     top: 0px;
